methods.args.MethodsArgs.scala.code
def move(nbPas: Int,verslAvant: Boolean) {
    if (verlAvant) {
      for(compteur <- 1 to nbPas) {
         avance()
      }
    }
  	else {
      for(compteur <- 1 to nbPas) {
         recule()
    }
}